2009-03-10  Paolo Carlini  <paolo.carlini@oracle.com>

	* doc/xml/faq.xml: Fix links to implementation status pages.

2009-03-10  Paolo Carlini  <paolo.carlini@oracle.com>

	* include/std/complex (operator+(const complex<>&, const _Tp&),
	operator+(const _Tp&, const complex<>&),
	operator-(const complex<>&, const _Tp&),
	operator-(const _Tp&, const complex<>&)): Do not assume real()
	returns a reference (against DR 387).
	* testsuite/26_numerics/complex/dr387_2.cc: New.

2009-03-02  Benjamin Kosnik  <bkoz@redhat.com>

	* testsuite/thread/pthread4.cc: Move...
	* testsuite/21_strings/basic_string/pthread4.cc: ...here.
	* testsuite/thread/pthread5.cc: Move...
	* testsuite/23_containers/list/pthread5.cc: ...here.
	* testsuite/thread/pthread6.cc: Move...
	* testsuite/23_containers/map/pthread6.cc: ...here.
	* testsuite/thread/pthread7-rope.cc: Move...
	* testsuite/ext/rope/pthread7-rope.cc: ...here.
	* testsuite/thread/guard.cc: Move...
	* testsuite/18_support/pthread_guard.cc: ...here.
	* testsuite/thread/18185.cc: Move...
	* testsuite/21_strings/basic_string/pthread18185.cc: ...here.
	* testsuite/thread/pthread1.cc: Move...
	* testsuite/23_containers/list/pthread1.cc: ...here.
	* testsuite/thread/pthread2.cc: Move...
	* testsuite/27_io/basic_ofstream/pthread2.cc: ...here.
	* testsuite/thread/pthread3.cc: Move...
	* testsuite/27_io/basic_ostringstream/pthread3.cc: ...here.

	* testsuite/libstdc++-dg/conformance.exp: Remove thread directory.
	* testsuite/thread: Remove.

2009-03-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* configure: Regenerate.

2009-02-23  Adam Nemet  <anemet@caviumnetworks.com>

	* testsuite/libstdc++-abi/abi.exp: Add multilib support.
	* acinclude.m4 (GLIBCXX_CONFIGURE_TESTSUITE): Remove MULTISUBDIR
	from baseline_dir.
	* configure: Regenerate.
	* testsuite/Makefile.am (baseline_file): Remove variable.
	(site.exp): Set baseline_dir rather than baseline_file.
	(check-abi): Pass AM_RUNTESTFLAGS and RUNTESTFLAGS to runtest.